<resources>
    <string name="app_name">AirPollutionDetector</string>
    <string name="title_activity_settings">Settings</string>
    <string name="common_ok">授予</string>

    <!--空氣品質-->
    <string name="AQI_excellent_color">#ff00e800</string>
    <string name="AQI_good_color">#ffffff00</string>
    <string name="AQI_lightly_polluted_color">#ffff7e00</string>
    <string name="AQI_moderately_polluted_color">#ffff0000</string>
    <string name="AQI_heavily_polluted_color">#ff8f3f97</string>
    <string name="AQI_severely_polluted_color">#ff7e0023</string>

    <string name="AQI_excellent_suggest">空氣品質為良好，污染程度低或無污染。</string>
    <string name="AQI_good_suggest">空氣品質普通；但對非常少數之極敏感族群產生輕微影響。</string>
    <string name="AQI_lightly_polluted_suggest">空氣污染物可能會對敏感族群的健康造成影響，但是對一般大眾的影響不明顯。</string>
    <string name="AQI_moderately_polluted_suggest">對所有人的健康開始產生影響，對於敏感族群可能產生較嚴重的健康影響。</string>
    <string name="AQI_heavily_polluted_suggest">健康警報：所有人都可能產生較嚴重的健康影響。</string>
    <string name="AQI_severely_polluted_suggest">健康威脅達到緊急，所有人都可能受到影響。</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">一般</string>



    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!--空氣汙染推播-->
    <string name="pref_header_air_pollution_notify">空氣汙染推播</string>

    <string name="key_enable_notify">key_enable_notify</string>
    <string name="summary_enable_notify">當空氣品質不良時可以獲得空氣汙染通知</string>
    <string name="title_enable_notify">開啟推播</string>

    <string name="key_enable_vibrate">key_enable_vibrate</string>
    <string name="summary_enable_vibrate">收到通知時震動</string>
    <string name="title_enable_vibrate">震動</string>

    <string name="key_enable_sound">key_enable_sound</string>
    <string name="summary_enable_sound">收到通知時發出音效</string>
    <string name="title_enable_sound">通知音效</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
